--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,6 +55,7 @@ nav ul {
 nav li {
     display: inline-block;
     padding: 0px 20px;
+    line-height: 0.75;
 }
 
 nav a {
@@ -88,4 +89,96 @@ h2 {
 p {
     font-size: 24px;
     line-height: 1.5;
+}
+
+/* index.html */
+.bienvenido {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+.bienvenidoTexto{
+    grid-column: 1;
+    margin-right: 70px;
+}
+
+.bienvenidoImagen {
+    grid-column: 2;
+    position: relative;
+    padding: 20xp;
+}
+
+
+/* Superposición de imágenes. No queda 10 puntos, hay que rever*/
+/* .vertical img {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.vertical {
+    width: 364px;
+    height: auto;
+    border-radius: 2%;
+    border: solid 2px #d3a625;
+}
+
+.horizontal {
+    width: 364px;
+    height: auto;
+    position: absolute;
+    top: 60%;
+    right: 30%;
+    transform: translate(0%, -30%);
+    z-index: 1;
+    border-radius: 2%;
+    border: solid 2px #d3a625;
+} */
+
+.horizontal {
+    width: 364px;
+    height: auto;
+    border-radius: 2%;
+    border: solid 2px #d3a625;
+}
+
+
+/* Carrusel */
+
+.carrusel {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 150px;
+    gap: 20px;
+    width: max-content;
+    overflow: hidden;
+}
+
+.botonCarrusel {
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+.card {
+    width: 270px;
+    height: 323px;
+    background-color: #DBD5BD;
+    border-radius: 16px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;   
+}
+
+.imgcard {
+    height: 200px;
+    width: 237px;
+    overflow: hidden;
+    border-radius: 16px;
+    justify-content: center;
 }
