--- a/css/estilos.css
+++ b/css/estilos.css
@@ -205,3 +205,55 @@ footer {
     position: relative;
     padding: 20xp;
 }
+
+
+
+/* Barra de búsqueda */
+.search-container {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
+
+#search-input {
+    background-color: #D9D9D9;
+    border-radius: 8px;
+    border: none;
+    padding: 8px 15px;
+    font-size: 16px;
+    outline: none;
+    width: 100%;
+}
+
+.search-icon {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.placeholder {
+    font-family: Peddana, Verdana, sans-serif;
+}
+
+/* Estilo del ícono de lupa */
+.search-icon:before {
+    content: "\1F50D";
+}
+
+/* Estilo del ícono de lupa en caso de que el sistema no lo reconozca */
+@font-face {
+    font-family: "Emoji";
+    src: url("https://cdnjs.cloudflare.com/ajax/libs/twemoji/13.1.0/2/svg/1f50d.svg") format("svg");
+}
+
+.search-icon:before {
+    font-family: "Emoji";
+}
+
+/* Estilo del ícono de lupa en caso de que el sistema no lo reconozca y no se pueda acceder a Internet */
+.no-font-emoji .search-icon:before {
+    content: "🔍";
+}
