carruseles varitas ok

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -169,7 +169,7 @@ footer {
     grid-column: 2;
     position: relative;
     padding: 20xp;
-  
+}  
   
   /* Superposición de imágenes. No queda 10 puntos, hay que rever*/
 /* .vertical img {
