--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,10 @@
+/* Importo las fuentes desde Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@600&family=Peddana&display=swap');
+
+/* Importo los íconos desde Flaticon */
+@import url('https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css');
 
 body {
     color: #000010;
