--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@600&family=Peddana&display=swap');
 
+@import url('https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css');
+
 body {
     color: #000010;
     font-family: Peddana, Verdana, sans-serif;
