--- a/css/estilos.css
+++ b/css/estilos.css
@@ -292,21 +292,44 @@ label, input, button {
 /* Responsive Styles */
 @media (max-width: 768px) {
     header {
+        width: 100%;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
         gap: 10px;
     }
 
     .logo {
         grid-column: 1 / span 2;
-        justify-content: flex-start;
+        justify-content: center;
     }
 
-    nav {
-        grid-column: 1 / span 2;
-        margin-top: 20px;
+    nav{
+        width: 100%;
+        display: flex;
+    }
+    nav ul{
+/*         grid-column: 1 / span 2;
+        margin-top: 20px; */
+        width: 100%;
+        flex-wrap: nowrap;
+        gap: 0;
+        justify-content: space-between;
     }
 
+    /* maqueto con grid la parte de la bienvenida */
+    .bienvenidoTexto{
+        grid-area: texto;
+    }
+    .bienvenidoImagen{
+        grid-area: imagen;
+    }
     .bienvenido {
-        grid-template-columns: 1fr;
+        display: grid;
+/*         grid-template: filas / columnas; */
+        grid-template: 1fr 1fr / 1fr;
+        grid-template-areas: "texto"
+                            "imagen";
     }
 
     .bienvenidoTexto,
@@ -320,7 +343,8 @@ label, input, button {
         padding: 5px 10px;
     }
 
-    .carrusel-contenedor {
+    /* lo del carrusel lo comenté así no se ve raro en el celu */
+/*     .carrusel-contenedor {
         flex-wrap: wrap;
     }
 
@@ -328,7 +352,7 @@ label, input, button {
         flex: 0 0 100%;
         margin-right: 0;
         margin-bottom: 20px;
-    }
+    } */
 }
 
 @media (max-width: 576px) {
